--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -9,19 +9,21 @@ body {
   margin: 16px auto;
 }
 
-.title {
+.title, .content, .button-container {
   background: #e3f4ff;
-}
-
-.content {
-  background: #e3f4ff;
+  margin: 10px;
+  padding: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align:center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  padding:8px 24px;
+  margin:0 auto;
 }
