Did some CSS exercises

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,8 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content:space-between;
 }
 
 .profile-image {
@@ -37,12 +39,19 @@ button {
   padding: 8px 24px;
 }
 
+.container {
+  display: flex;
+  justify-content: right;
+}
+
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  margin:8px;
 }
 
 ul {
   list-style-type: none;
+  display:flex;
 }
