--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,21 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 200;
+  text-align:center;
+}
+
+.info {
+  max-width:200px;
+}
+
+.text {
+  text-align:center;
+}
+
+.container {
+  display:flex;
+  margin-top:100px;
 }
 
 /* do not edit this footer */
