--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -4,6 +4,15 @@ body {
   min-height: 100vh;
 }
 
+a {
+  text-decoration:none;
+  color:white;
+}
+
+ul {
+  list-style:none;
+}
+
 .header {
   height: 72px;
   background: darkmagenta;
@@ -20,10 +29,24 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  padding:20px;
+  text-align:left;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  margin:20px;
+  padding:10px;
+}
+
+.container {
+  display:flex;
+  justify-content:space-evenly;
+}
+
+.container2 {
+  display:flex;
+  justify-content:space-between;
 }
