Revisited the flexbox exercises. Learnt about margin:auto.

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -13,7 +13,8 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
-  justify-content:space-between;
+  justify-content:flex-start;
+  padding:8px;
 }
 
 .profile-image {
@@ -39,9 +40,13 @@ button {
   padding: 8px 24px;
 }
 
+.profile-image {
+  flex-shrink:0;
+}
+
 .container {
   display: flex;
-  justify-content: right;
+  margin-left: auto;
 }
 
 a {
